--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-label {
+/* label {
   display: block;
   margin-top: 10px;
 }
@@ -29,4 +29,13 @@ label {
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
+} */
+#react-paginate ul {
+  display: inline-block;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+#react-paginate li {
+  display: inline-block;
 }
